# LetMeC

./: CMakeLists.txt  README.md  oddeven.c
src/: main.c
src/array/: ArrayList.c  ArrayList.h  variadic.c  variadic.h
src/math/: oddeven.c  oddeven.h
src/memory/: dereference.c  dereference.h
src/struct/: dog.c  dog.h  struct.c  struct.h
